--- a/cctask.css
+++ b/cctask.css
@@ -109,6 +109,17 @@ body > img{
     opacity:0;
     animation: appear 2s ease-out forwards;
 }
+#hotspots div{
+    margin:50px auto;
+    color:white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5em;
+    width: 70%;
+
+}
+#hotspots div span{
+    color: rgb(80 193 239);
+}
 @keyframes appear{
     0%{
         transform: scale(0.75);
@@ -338,8 +349,9 @@ nav ul li a.active{
     color: white;
 }
 #hotspots{
-    height: 100vh;
+    
     padding-top: 150px;
+    padding-bottom: 150px;
 }
 #contact{
     height: 200px;
