--- a/cctask.css
+++ b/cctask.css
@@ -109,7 +109,7 @@ body > img{
     opacity:0;
     animation: appear 2s ease-out forwards;
 }
-#hotspots>div{
+.hotspots>div{
     margin:50px auto;
     color:white;
     font-family: 'Montserrat', sans-serif;
@@ -117,7 +117,7 @@ body > img{
     width: 70%;
 
 }
-#hotspots div span{
+.hotspots div span{
     color: rgb(80 193 239);
 }
 @keyframes appear{
@@ -303,7 +303,7 @@ nav ul li a.active{
 #country{
     min-height: 50vh;
 }
-#country p, #hotspots p{
+#country p, .hotspots p{
     display: inline;
     font-family: 'Montserrat',sans-serif;
     text-align: center;
@@ -313,7 +313,7 @@ nav ul li a.active{
     border-bottom:1px solid rgb(80 193 239) ;
     color: white;
 }
-#hotspots{
+.hotspots{
     
     padding-top: 150px;
     padding-bottom: 150px;
