--- a/cctask.css
+++ b/cctask.css
@@ -19,6 +19,7 @@ nav{
     position: fixed;
     width: 100%;
     font-family: open sans, sans-serif;
+   
 }
 nav ul{
     display:flex;
@@ -27,6 +28,10 @@ nav ul{
 }
 nav ul li {
     list-style: none;
+    color:rgb(80 193 239);
+}
+nav span{
+    color:rgb(80 193 239) !important;
 }
 nav ul li a{ 
     color:rgb(80 193 239);
@@ -316,10 +321,10 @@ nav ul li a.active{
 .hotspots{
     
     padding-top: 150px;
-    padding-bottom: 150px;
+    /* padding-bottom: 150px; */
 }
 #contact{
-    height: 200px;
+    height: 250px;
     width: 100%;
     overflow: hidden;
     background-color: black;
@@ -348,7 +353,7 @@ nav ul li a.active{
     width: 95%;
     margin: auto;
     align-items: center;
-    height: 80%;
+    height: 70%;
     color:white;
     font-family: 'Montserrat',sans-serif;
     justify-content: space-between;
@@ -392,8 +397,22 @@ nav ul li a.active{
 }
 .tencontainer{
     background: rgba(0,0,0,0.8);
-    margin-bottom:100px;
+    /* margin-bottom:100px; */
     border-bottom: 1px solid rgb(80 193 239);
+}
+marquee{
+    font-family:  'Montserrat', sans-serif;
+    font-size: 1.3em;
+}
+marquee span{
+    vertical-align: top;
+}
+marquee div{
+    display: inline-block;
+    height: 20px;
+    margin:5px 30px;
+    width: 2px;
+    background-color: rgb(80 193 239);
 }
 .yeartag-active{
     border-bottom:1px solid rgba(0,0,0,0.8);
