--- a/cctask.css
+++ b/cctask.css
@@ -306,7 +306,8 @@ nav ul li a.active{
     transform-style: preserve-3d;
 }
 #country{
-    min-height: 50vh;
+    min-height: 25vh;
+
 }
 #country p, .hotspots p{
     display: inline;
@@ -320,7 +321,7 @@ nav ul li a.active{
 }
 .hotspots{
     
-    padding-top: 150px;
+    padding-top: 10px;
     /* padding-bottom: 150px; */
 }
 #contact{
@@ -381,6 +382,12 @@ nav ul li a.active{
 .year-container::-webkit-scrollbar{
     display: none;
 }
+.year-container{
+    scrollbar-width: 0;
+}
+#specs{
+    width: 50%;
+}
 .yeartag{
     width:20%;
     height:8vh;
@@ -409,7 +416,7 @@ marquee span{
 }
 marquee div{
     display: inline-block;
-    height: 20px;
+    height: 130px;
     margin:5px 30px;
     width: 2px;
     background-color: rgb(80 193 239);
@@ -594,5 +601,8 @@ input[type=number] {
     }
     #mob{
         display:block;
+    }
+    #specs{
+        width: 80%;
     }
 }
